Add compelling hero section to README
- Added eye-catching hero section with logo placeholder
- Clear value proposition: Transform Your AI Into Anyone You Need
- Highlighted key differentiators and use cases
- 60-second quick start guide
- Professional marketing copy that explains the product clearly
- Organized badges remain at top, hero section below

--- a/docs/readme/config.json
+++ b/docs/readme/config.json
@@ -18,6 +18,7 @@
       "description": "Complete README for GitHub repository",
       "chunks": [
         "00-header-extended",
+        "00-hero-section",
         "01-installation",
         "02-quick-start",
         "03-features",
