Add single source of truth for MCP tool count
- Created scripts/count-tools.js to definitively count MCP tools
- Added npm scripts: 'npm run tools:count' and 'npm run tools:list'
- Corrected hero section to show 41 MCP Tools (actual count)
- Tool breakdown:
  • Authentication: 5 tools
  • Build Information: 1 tool
  • Collection Management: 7 tools
  • Configuration: 4 tools
  • Element Management: 12 tools
  • Persona Import/Export: 3 tools
  • Portfolio Management: 6 tools
  • User Management: 3 tools
  = Total: 41 MCP Tools

This script is now the single source of truth for tool count.

--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "qa:simple": "node scripts/qa-simple-test.js",
     "update:version": "node scripts/update-version.mjs",
     "version:bump": "node scripts/update-version.mjs",
-    "version:check": "node scripts/update-version.mjs --dry-run"
+    "version:check": "node scripts/update-version.mjs --dry-run",
+    "tools:count": "node scripts/count-tools.js",
+    "tools:list": "node scripts/count-tools.js --json"
   },
   "keywords": [
     "mcp",
