--- a/.github/workflows/performance-testing.yml
+++ b/.github/workflows/performance-testing.yml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]  # Performance testing only needs one platform
+        os: [ubuntu-latest, windows-latest, macos-latest]
         node-version: ['20.x']  # Focus on LTS for performance testing
 
     steps:
