fix: Allow Docker Hub login for PRs from same repository
The login was being skipped for all pull_request events, including
PRs from branches in the same repository. This caused the rate limit
errors to persist.

Updated condition to allow login when:
- It's not a pull_request event, OR
- It's a pull_request from the same repository (not a fork)

This maintains security (no secrets for fork PRs) while fixing auth.

--- a/.github/workflows/docker-testing.yml
+++ b/.github/workflows/docker-testing.yml
@@ -96,7 +96,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-        if: github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
         continue-on-error: true
 
       - name: 🔧 Set up QEMU (AMD64 only - ARM64 uses native runner)
@@ -653,7 +653,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-        if: github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
         continue-on-error: true
 
       - name: Test MINIMAL Docker Compose (hello world test)
