--- a/.github/workflows/extended-node-compatibility.yml
+++ b/.github/workflows/extended-node-compatibility.yml
@@ -76,9 +76,8 @@ jobs:
             build/
             *.tsbuildinfo
           key: typescript-build-${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('src/**/*.ts', 'tsconfig*.json', 'package.json', 'package-lock.json') }}
-          restore-keys: |
-            typescript-build-${{ runner.os }}-${{ matrix.node-version }}-
-            typescript-build-${{ runner.os }}-
+          # REMOVED restore-keys to prevent using stale caches with old compiled code
+          # This ensures we always rebuild when source files change
 
       - name: Install dependencies
         run: npm ci
