--- a/.github/workflows/extended-node-compatibility.yml
+++ b/.github/workflows/extended-node-compatibility.yml
@@ -93,9 +93,8 @@ jobs:
             test/coverage/
             node_modules/.cache/jest/
           key: jest-cache-${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('test/__tests__/**/*.ts', 'test/jest.config.*', 'src/**/*.ts', 'package.json', 'package-lock.json') }}
-          restore-keys: |
-            jest-cache-${{ runner.os }}-${{ matrix.node-version }}-
-            jest-cache-${{ runner.os }}-
+          # REMOVED restore-keys for consistency with TypeScript cache fix
+          # Jest cache can also become stale and cause test failures
 
       - name: Run test suite
         run: npm test
