--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,29 +11,11 @@ sonar.javascript.lcov.reportPaths=test/coverage/lcov.info
 sonar.typescript.tsconfigPaths=tsconfig.json,tsconfig.test.json
 
 # Exclusions for code coverage
-sonar.coverage.exclusions=\
-  **/*.test.ts,\
-  **/*.spec.ts,\
-  **/test/**,\
-  **/dist/**,\
-  **/node_modules/**,\
-  **/coverage/**
+sonar.coverage.exclusions=**/*.test.ts,**/*.spec.ts,**/test/**,**/dist/**,**/node_modules/**,**/coverage/**
 
 # Duplication (CPD) Exclusions
 # Exclude suppressions files which contain intentional repetitive configuration data
-sonar.cpd.exclusions=\
-  **/suppressions.ts,\
-  **/suppressions.js,\
-  **/*suppressions*.ts,\
-  **/*suppressions*.js,\
-  **/security-suppressions.json,\
-  **/test/**/*.test.ts,\
-  **/test/**/*.spec.ts
+sonar.cpd.exclusions=src/security/audit/config/suppressions.ts,**/suppressions.ts,**/suppressions.js,**/*suppressions*.ts,**/*suppressions*.js,**/security-suppressions.json,**/test/**/*.test.ts,**/test/**/*.spec.ts,src/security/audit/config/*
 
 # Additional exclusions from analysis
-sonar.exclusions=\
-  **/node_modules/**,\
-  **/dist/**,\
-  **/coverage/**,\
-  **/*.min.js,\
-  **/*.min.css
+sonar.exclusions=**/node_modules/**,**/dist/**,**/coverage/**,**/*.min.js,**/*.min.css
