--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,8 @@ sonar.coverage.exclusions=**/*.test.ts,**/*.spec.ts,**/test/**,**/dist/**,**/nod
 
 # Duplication (CPD) Exclusions
 # Exclude suppressions files which contain intentional repetitive configuration data
-sonar.cpd.exclusions=src/security/audit/config/suppressions.ts,**/suppressions.ts,**/suppressions.js,**/*suppressions*.ts,**/*suppressions*.js,**/security-suppressions.json,**/test/**/*.test.ts,**/test/**/*.spec.ts,src/security/audit/config/*
+# These are configuration files where repetitive structure is expected and necessary
+sonar.cpd.exclusions=src/security/audit/config/suppressions.ts,src/security/audit/config/**,**/test/**,test/**
 
 # Additional exclusions from analysis
 sonar.exclusions=**/node_modules/**,**/dist/**,**/coverage/**,**/*.min.js,**/*.min.css
