chore: Add SonarCloud analysis files to gitignore
- Remove accidentally committed 19MB sonarcloud-issues.json
- Add sonarcloud analysis files to gitignore
- Keep scripts but ignore large generated JSON files

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,8 @@ docs/QA/qa-test-results-*.json
 docs/QA/qa-direct-test-results-*.json
 docs/QA/qa-github-integration-*.json
 docs/QA/agent-reports/*-Results.json
+
+# SonarCloud analysis files
+sonarcloud-issues.json
+sonarcloud-analysis.json
+.scannerwork/
