chore: Remove SonarCloud analysis files from git tracking
- Removed 4 large JSON files from git (20MB+ total)
- Updated .gitignore to properly exclude all SonarCloud output files
- These files should be generated locally, not tracked in version control
- Keeps only configuration files (.sonarcloud.properties, sonar-project.properties)

--- a/.gitignore
+++ b/.gitignore
@@ -91,4 +91,7 @@ docs/QA/agent-reports/*-Results.json
 # SonarCloud analysis files
 sonarcloud-issues.json
 sonarcloud-analysis.json
+sonarcloud_issues_summary.json
+temp_sonar.json
+*.sonar.json
 .scannerwork/
