chore: Remove temporary SonarCloud utility scripts
- Remove mark-*.sh scripts (temporary hotspot clearing utilities)
- Remove hotspots.json (temporary data file)
- Add pattern to .gitignore to prevent future commits
- Keep oauth-helper.mjs (legitimate infrastructure)

These files were created during SonarCloud hotspot clearing session
and accidentally committed to main in v1.9.15 release.

Resolves #1231

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,7 @@ sonarcloud_issues_summary.json
 temp_sonar.json
 *.sonar.json
 .scannerwork/
+
+# Temporary SonarCloud utility scripts
+mark-*.sh
+hotspots.json
