docs: Add Jeet Singh to NPM contributors list
Recognizes our first external contributor for their valuable work in v1.9.6:
- Performance optimization: Improved whitespace detection
- Security enhancement: Strengthened path traversal protection

Fixes #1240

--- a/package.json
+++ b/package.json
@@ -86,6 +86,12 @@
     "email": "mick@mickdarling.com",
     "url": "https://github.com/mickdarling"
   },
+  "contributors": [
+    {
+      "name": "Jeet Singh",
+      "url": "https://github.com/jeetsingh008"
+    }
+  ],
   "license": "AGPL-3.0",
   "repository": {
     "type": "git",
