feat: add MCP registry publishing workflow with OIDC
- Add GitHub Actions workflow for automated MCP registry publishing
- Use OIDC authentication (github-oidc) instead of broken OAuth device flow
- Add server.json with correct namespace casing (DollhouseMCP)
- Include server.json in NPM package files array
- Workflow triggers on release publish + manual dispatch
- Resolves OAuth zero-scopes bug for organization publishing

Technical details:
- OIDC permissions: id-token:write, contents:read
- Version: 1.9.18
- Namespace: io.github.DollhouseMCP/mcp-server
- Follows patterns from Microsoft, Cloudflare, Prefect implementations

--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "data/ensembles/**/*.md",
     "!dist/__tests__/**",
     "!dist/**/*.test.*",
+    "server.json",
     "oauth-helper.mjs",
     "README.md",
     "LICENSE",
