fix: Correct mcp-publisher download URL and repository
CRITICAL FIX for v1.9.19 MCP registry publishing failure

Root Cause:
- Workflow was using wrong repository: modelcontextprotocol/publish
- Should be: modelcontextprotocol/registry
- Wrong asset name: mcp-publisher-linux-x64 (doesn't exist)
- Correct: mcp-publisher_linux_amd64.tar.gz (tar archive)

Error Evidence:
- curl downloaded only 9 bytes ("Not Found" text)
- Binary execution failed with "Not: command not found"

Fix:
- Updated repository path to modelcontextprotocol/registry
- Updated asset name to mcp-publisher_linux_amd64.tar.gz
- Added tar extraction step
- Kept version pinned to v1.3.3 for reproducibility

Testing Plan:
- Test with workflow_dispatch in dry-run mode first
- Once verified, publish v1.9.19 to MCP registry

Ref: v1.9.19 release (feature #1367)

--- a/.github/workflows/publish-mcp-registry.yml
+++ b/.github/workflows/publish-mcp-registry.yml
@@ -41,7 +41,8 @@ jobs:
         shell: bash
         run: |
           # Pinned to v1.3.3 for reproducibility
-          curl -L https://github.com/modelcontextprotocol/publish/releases/download/v1.3.3/mcp-publisher-linux-x64 -o /tmp/mcp-publisher
+          curl -L https://github.com/modelcontextprotocol/registry/releases/download/v1.3.3/mcp-publisher_linux_amd64.tar.gz -o /tmp/mcp-publisher.tar.gz
+          tar -xzf /tmp/mcp-publisher.tar.gz -C /tmp
           chmod +x /tmp/mcp-publisher
           sudo mv /tmp/mcp-publisher /usr/local/bin/mcp-publisher
 
