refactor: Address PR review feedback for GitHub Packages workflow
Implemented all three suggested improvements from Claude reviewer:

1. VERSION VARIABLE SAFETY (.github/workflows/publish-github-packages.yml:56-60)
   - Added validation to ensure PACKAGE_VERSION is not empty
   - Fails gracefully with clear error message if extraction fails
   - Prevents silent failures from empty version strings

2. AUTHENTICATION ERROR HANDLING (.github/workflows/publish-github-packages.yml:70-75)
   - Enhanced npm view check to distinguish between:
     * Package not found (404) - proceed with publication
     * Authentication errors - proceed but warn (publish will fail safely if duplicate)
   - Captures full output to detect auth vs not-found scenarios
   - Provides clear messaging for each case

3. REGISTRY CONFIGURATION CONSISTENCY (.github/workflows/publish-github-packages.yml:99-102)
   - Added documentation explaining registry configuration
   - Clarified that setup-node's registry-url parameter configures .npmrc
   - Explained NODE_AUTH_TOKEN authentication flow

4. TEST SCENARIO DOCUMENTATION (.github/workflows/publish-github-packages.yml:9-13)
   - Added comprehensive test scenarios at workflow header
   - Documents expected behavior for:
     * New version publication
     * Duplicate tag push
     * Invalid/empty version
     * Authentication issues

IMPROVEMENTS:
- Better error messages with emoji indicators (✓, ❌, ⚠️)
- Safer error handling with || true to prevent unexpected exits
- Case-insensitive grep for auth errors (unauthorized|forbidden|authentication)
- Comprehensive inline documentation for future maintainers

All three reviewer concerns addressed. Workflow now more robust against
edge cases while maintaining backward compatibility.

--- a/.github/workflows/publish-github-packages.yml
+++ b/.github/workflows/publish-github-packages.yml
@@ -1,5 +1,17 @@
 name: Publish to GitHub Packages
 
+# This workflow publishes the package to GitHub Packages Registry when a version tag is pushed.
+# It includes duplicate publication prevention to handle cases where:
+# - A tag is re-pushed or moved
+# - Multiple commits trigger the workflow for the same version
+# - Manual workflow_dispatch is run multiple times
+#
+# Test Scenarios (validate on next release):
+# 1. New version publication → should publish successfully
+# 2. Duplicate tag push → should skip with clear message
+# 3. Invalid/empty version → should fail gracefully with error
+# 4. Authentication issues → should proceed to publish (fails safely if duplicate)
+
 on:
   push:
     tags:
@@ -50,24 +62,44 @@ jobs:
       - name: Check if version already published
         id: check_version
         run: |
+          # Extract and validate version from package.json
           PACKAGE_VERSION=$(node -p "require('./package.json').version")
+
+          # Validate version is not empty
+          if [ -z "$PACKAGE_VERSION" ]; then
+            echo "❌ Error: Could not extract version from package.json"
+            exit 1
+          fi
+
           echo "Checking if version $PACKAGE_VERSION is already published..."
 
           # Try to fetch package info from GitHub Packages
-          # Use npm view with the GitHub Packages registry
-          if npm view @DollhouseMCP/mcp-server@$PACKAGE_VERSION --registry=https://npm.pkg.github.com version 2>/dev/null; then
-            echo "Version $PACKAGE_VERSION already exists on GitHub Packages"
+          # Capture both stdout and exit code to distinguish between errors
+          if npm view @DollhouseMCP/mcp-server@$PACKAGE_VERSION --registry=https://npm.pkg.github.com version 2>&1 | grep -q "$PACKAGE_VERSION"; then
+            echo "✓ Version $PACKAGE_VERSION already exists on GitHub Packages"
             echo "already_published=true" >> $GITHUB_OUTPUT
           else
-            echo "Version $PACKAGE_VERSION not found, proceeding with publication"
-            echo "already_published=false" >> $GITHUB_OUTPUT
+            # Check if it was an authentication error vs package not found
+            CHECK_OUTPUT=$(npm view @DollhouseMCP/mcp-server@$PACKAGE_VERSION --registry=https://npm.pkg.github.com version 2>&1 || true)
+            if echo "$CHECK_OUTPUT" | grep -qi "unauthorized\|forbidden\|authentication"; then
+              echo "⚠️ Warning: Authentication issue checking package existence"
+              echo "Proceeding with publication attempt (will fail safely if already exists)"
+              echo "already_published=false" >> $GITHUB_OUTPUT
+            else
+              echo "✓ Version $PACKAGE_VERSION not found, proceeding with publication"
+              echo "already_published=false" >> $GITHUB_OUTPUT
+            fi
           fi
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish to GitHub Packages
         if: steps.check_version.outputs.already_published == 'false'
-        run: npm publish
+        run: |
+          # Publish to GitHub Packages
+          # Registry is configured via setup-node step's registry-url parameter
+          # NODE_AUTH_TOKEN provides authentication to GitHub Packages
+          npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
